load("@bazel_gazelle//:def.bzl", "gazelle")
load("@buildifier_prebuilt//:rules.bzl", "buildifier")
load("//:def.bzl", "bazeldnf")
load("//:deps.bzl", "rpmtree", "tar2files")

# gazelle:prefix github.com/rmohr/bazeldnf
gazelle(name = "gazelle")

buildifier(
    name = "buildifier",
    exclude_patterns = [
        "./.git/*",
    ],
    mode = "fix",
)

bazeldnf(
    name = "bazeldnf",
)

rpmtree(
    name = "something",
    rpms = [
        "@libvirt-libs-6.1.0-2.fc32.x86_64.rpm//rpm",
        "@libvirt-devel-6.1.0-2.fc32.x86_64.rpm//rpm",
    ],
)

tar2files(
    name = "something_libs",
    files = {
        "/usr/lib64": [
            "libvirt.so.0",
            "libvirt.so.0.6001.0",
        ],
    },
    tar = ":something",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "bar",
    srcs = ["//:something_libs/usr/lib64"],
)
