module(
    name = "bazeldnf",
    version = "0.6.0",
)

bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "protobuf", version = "21.7", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_go", version = "0.44.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.35.0", repo_name = "bazel_gazelle")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps", isolate = True)
go_deps.from_file(go_mod = "//:go.mod")

# override from go.mod, this is not supported by gazelle as of 0.35.0
go_deps.archive_override(
    path = "github.com/sassoftware/go-rpmutils",
    urls = [
        "https://github.com/rmohr/go-rpmutils/archive/5acf7436c00dee9caf9367340b35d8c52961d240.tar.gz",
    ],
    strip_prefix = "go-rpmutils-5acf7436c00dee9caf9367340b35d8c52961d240",
    sha256 = "41953067dcc570723f21296728aec19b4967567db0f8a1323aed9633ce37eb9a"
)

# dependencies from the override
go_deps.module(
    path = "github.com/DataDog/zstd",
    version = "v1.4.5",
    sum = "h1:EndNeuB0l9syBZhut0wns3gV1hL8zX8LIu6ZiVHWLIQ=",
    indirect = True
)
go_deps.module(
    path = "github.com/ulikunitz/xz",
    version = "v0.5.9",
    sum = "h1:RsKRIA2MO8x56wkkcd3LbtcE/uMszhb6DpRf+3uwa3I=",
    indirect = True
)

use_repo(
    go_deps,
    "com_github_bazelbuild_buildtools",
    "com_github_crillab_gophersat",
    "com_github_onsi_gomega",
    "com_github_sassoftware_go_rpmutils",
    "com_github_sirupsen_logrus",
    "com_github_spf13_cobra",
    "io_k8s_sigs_yaml",
    "org_golang_x_crypto",
)

prebuild_binaries = use_extension("//:extensions.bzl", "prebuild_binaries")
use_repo(
    prebuild_binaries,
    "bazeldnf-darwin-amd64",
    "bazeldnf-darwin-arm64",
    "bazeldnf-linux-amd64",
    "bazeldnf-linux-arm64",
    "bazeldnf-linux-ppc64",
    "bazeldnf-linux-ppc64le",
)

rpm_deps = use_extension("//:extensions.bzl", "rpm_deps", dev_dependency = True)
rpm_deps.rpm(
    name = "libvirt-libs-6.1.0-2.fc32.x86_64.rpm",
    sha256 = "3a0a3d88c6cb90008fbe49fe05e7025056fb9fa3a887c4a78f79e63f8745c845",
    urls = [
        "https://download-ib01.fedoraproject.org/pub/fedora/linux/releases/32/Everything/x86_64/os/Packages/l/libvirt-libs-6.1.0-2.fc32.x86_64.rpm",
        "https://storage.googleapis.com/builddeps/3a0a3d88c6cb90008fbe49fe05e7025056fb9fa3a887c4a78f79e63f8745c845",
    ],
)
rpm_deps.rpm(
    name = "libvirt-devel-6.1.0-2.fc32.x86_64.rpm",
    dependencies = [
        "@libvirt-libs-6.1.0-2.fc32.x86_64.rpm//rpm:entry",
    ],
    sha256 = "2ebb715341b57a74759aff415e0ff53df528c49abaa7ba5b794b4047461fa8d6",
    urls = [
        "https://download-ib01.fedoraproject.org/pub/fedora/linux/releases/32/Everything/x86_64/os/Packages/l/libvirt-devel-6.1.0-2.fc32.x86_64.rpm",
        "https://storage.googleapis.com/builddeps/2ebb715341b57a74759aff415e0ff53df528c49abaa7ba5b794b4047461fa8d6",
    ],
)
use_repo(
    rpm_deps,
    "libvirt-devel-6.1.0-2.fc32.x86_64.rpm",
    "libvirt-libs-6.1.0-2.fc32.x86_64.rpm",
)

bazel_dep(
    name = "buildifier_prebuilt",
    version = "6.4.0",
    dev_dependency = True,
)
