load("@bazel_lib//:bzl_library.bzl", "bzl_library")

filegroup(
    name = "all_files",
    srcs = glob(["**"]),
    visibility = ["//:__pkg__"],
)

bzl_library(
    name = "toolchains_repo",
    srcs = ["toolchains_repo.bzl"],
    visibility = ["//bazeldnf:__subpackages__"],
    deps = ["//bazeldnf:platforms"],
)

exports_files([
    "update-lock-file.sh",
    "fetch-dnf-repo.sh",
])

bzl_library(
    name = "lock-file-helpers",
    srcs = ["lock-file-helpers.bzl"],
    visibility = ["//bazeldnf:__subpackages__"],
    deps = [
        "//bazeldnf:toolchain",
        "@bazel_skylib//lib:shell",
    ],
)

bzl_library(
    name = "resolved_bazeldnf_toolchain",
    srcs = ["resolved_bazeldnf_toolchain.bzl"],
    visibility = ["//bazeldnf:__subpackages__"],
    deps = ["//bazeldnf:toolchain"],
)
