"example MODULE.bazel to test bzlmod integration for bazeldnf with a prebuilt toolchain"

module(name = "example-bazeldnf-bzlmod-toolchain-from-source")

bazel_dep(name = "bazeldnf", dev_dependency = True)
local_path_override(
    module_name = "bazeldnf",
    path = "../..",
)

bazel_dep(name = "rules_pkg", version = "1.1.0")

bazeldnf_toolchain = use_extension("@bazeldnf//bazeldnf:extensions.bzl", "bazeldnf_toolchain")
bazeldnf_toolchain.register(disable = True)

bazeldnf = use_extension("@bazeldnf//bazeldnf:extensions.bzl", "bazeldnf")
bazeldnf.config(
    name = "bazeldnf_rpms",
    excludes = [
        "filesystem",
        "setup",
        "basesystem",
        "glibc-[0-9]",
        "glibc-devel",
        "coreutils",
        "alternatives",
        "audit-libs",
        "fedora-release-common",
    ],
    lock_file = "//:bazeldnf-lock.json",
    repofile = "//:repo.yaml",
    rpms = [
        "bash",
        "libzstd",  # we exclude it from `update-repo` only directly in the `repo.yaml` file
    ],
)
use_repo(
    bazeldnf,
    "bazeldnf_rpms",
)
