"example MODULE.bazel to test bzlmod integration for bazeldnf without a prebuilt toolchain"

module(name = "example-bazeldnf-bzlmod-issues-with-ignore-flag")

bazel_dep(name = "bazeldnf", dev_dependency = True)
local_path_override(
    module_name = "bazeldnf",
    path = "../..",
)

bazel_dep(name = "rules_pkg", version = "1.1.0")

bazeldnf_toolchain = use_extension("@bazeldnf//bazeldnf:extensions.bzl", "bazeldnf_toolchain")
bazeldnf_toolchain.register(disable = True)

bazeldnf = use_extension("@bazeldnf//bazeldnf:extensions.bzl", "bazeldnf")
bazeldnf.config(
    name = "bazeldnf_rpms",
    cache_dir = "./.bazeldnf-test-issues-with-ignore-flag",
    excludes = [
        "alternatives",
        "basesystem",
    ],
    ignore_deps = False,
    lock_file = "//:bazeldnf-lock.json",
    repofile = "//:repos.yaml",
    rpm_repository_prefix = "x86-64",
    rpms = [
        "bash",
        "git",
        "glibc",
    ],
)
bazeldnf.config(
    name = "bazeldnf_bash",
    cache_dir = "./.bazeldnf-test-issues-with-ignore-flag",
    excludes = [
        "alternatives",
        "basesystem",
    ],
    ignore_deps = False,
    lock_file = "//:bazeldnf-lock-bash.json",
    repofile = "//:repos.yaml",
    rpm_repository_prefix = "x86-64",
    rpms = [
        "bash",
    ],
)
use_repo(
    bazeldnf,
    "bazeldnf_bash",
    "bazeldnf_rpms",
)
