module(
    name = "bazeldnf-bzlmod-example",
    version = "0.0.0",
)

bazel_dep(name = "bazeldnf", version = "0.6.0")
local_path_override(
    module_name = "bazeldnf",
    path = "../../",
)

bazel_dep(name = "gazelle", version = "0.35.0")

rpm_deps = use_extension("@bazeldnf//:extensions.bzl", "rpm_deps", dev_dependency = False)
rpm_deps.lock_file(
    generated_visibility = [
        "//visibility:public",
    ],
    path = "rpmtree/rpm.json",
    rpm_tree_name = "rpm",
)
use_repo(rpm_deps, "rpm")
